# workshop-01-ao-vivo

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: multiplos_erros.xlsx
docs/: index.md
sql/: create_table.sql
src/: app.py  backend.py  contrato.py  frontend.py
tests/: test_contrato.py  test_funcional.py  test_integracao.py
