[tool.poetry]
name = "workshop-01-ao-vivo"
version = "0.1.0"
description = ""
authors = ["Felipe Sebben <felipesebben@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.30.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
pytest = "^7.4.4"
selenium = "^4.17.2"
taskipy = "^1.12.2"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.1"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.1"}
mkdocs-material = "^9.5.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
kill_port = "FOR /F \"tokens=5\" %a IN ('netstat -a -n -o ^| findstr :8501') DO taskkill /F /PID %a"
streamlit = "streamlit run src/app.py"

run_tests = "pytest tests -v"